[tool.poetry]
name = "music-service-async-interface"
version = "0.1.0"
description = ""
authors = ["JuniorJPDJ <dev@juniorjpdj.pl>"]

[tool.poetry.dependencies]
python = "^3.8"
http-seekable-file = {git = "https://github.com/JuniorJPDJ/http-seekable-file", extras = ["async"], optional = true}

[tool.poetry.extras]
filelike = ["http-seekable-file"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
