[tool.poetry]
name = "music-service-async-interface"
version = "0.1.0"
description = ""
authors = ["JuniorJPDJ <dev@juniorjpdj.pl>", "Kasper Seweryn <github@wvffle.net>"]

[tool.poetry.dependencies]
python = "^3.7"
http-seekable-file = { git = "https://github.com/JuniorJPDJ/http-seekable-file.git", extras = ["async"], optional = true }
aiohttp = "^3.6"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0.0"

[tool.poetry.extras]
filelike = ["http-seekable-file"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tmp
)/
'''

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_third_party = []
